--- a/src/style.css
+++ b/src/style.css
@@ -259,6 +259,7 @@ body {
 
 .note p, h3{
     color: whitesmoke;
+    padding: 6px;
 }
 
 /* Modal for adding notes */
@@ -328,6 +329,8 @@ body {
 /* Remove note button */
 .remove-note {
     position: absolute;
+    padding: 15px;
+
     background-size: 15px 16px;
     top: 5px;
     right: 5px;
@@ -507,8 +510,11 @@ body {
 }
 
 .delete-project:hover{
-    background-size: 2.3em 2.3em;
-    
+    background-size: 2.3em 2.3em;   
+}
+
+.note:hover{
+    transform: scale(1.05);
 }
 
 input:focus, textarea:focus {
@@ -516,4 +522,34 @@ input:focus, textarea:focus {
     outline: none; /* Removes the default focus outline */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow for focus indication */
     background-color: whitesmoke;
+}
+
+footer {
+    display: flex;
+    gap: 0.8em;
+    text-align: center;
+    padding: 10px 0;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    background-color: #252b338a;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 0.8em;
+}
+
+
+.footer .iconImg{
+    background-image: url('/src/assets/github-mark-white.png');
+    background-size: 1em 1em;
+    height: 1em;
+    width: 1em;
+}
+
+#left, #right{
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
